gcc/testsuite/rust/rustc/ui/argument-suggestions/display-is-suggestable_dg.rs
use std::fmt::Display;

fn foo(x: &(dyn Display + Send)) {}

fn main() {
    foo();
// { dg-error ".E0061." "" { target *-*-* } .-1 }
}

